Further manual fixes.

--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -22,7 +22,7 @@
   pages={280-293}
 }
 
-@inproceedings{Cayton:2008,
+@inproceedings{Cayton2008,
   author = {Cayton, Lawrence},
   title = {Fast nearest neighbor retrieval for bregman divergences},
   booktitle = {Proceedings of the 25th international conference on Machine learning},
